stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-demo-stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary-demo
      version: stable
  template:
    metadata:
      labels:
        app: canary-demo
        version: stable
    spec:
      containers:
      - name: app
        image: coderuner/canary-demo:release-0.5
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
