canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-canary
spec:
  selector:
    app: canary-demo
    version: canary
  ports:
    - port: 80
      targetPort: 8080
