stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
spec:
  selector:
    app: canary-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
